test/libsolidity/syntaxTests/nameAndTypeResolution/498_msg_gas_deprecated.sol
contract C {
    function f() public view returns (uint256 val) { return msg.gas; }
}
// ----
// TypeError: (73-80): "msg.gas" has been deprecated in favor of "gasleft()"
